// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecuritySelector component should render properly for collection 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={1}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <ForwardRef(Typography)
      component="p"
      variant="body2"
    >
      test description for collection
    </ForwardRef(Typography)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <Field
      component={[Function]}
      disabled={false}
      displayPrompt={true}
      policyDropdownId="rek-security"
      prompt="test2"
    />
  </ForwardRef(Grid)>
  <Memo(SelectedSecurityPolicyDescription)
    selectedPolicyKey={2}
    title="test3"
  />
</ForwardRef(Grid)>
`;

exports[`SecuritySelector component should render properly for community 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={1}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <ForwardRef(Typography)
      component="p"
      variant="body2"
    >
      test description for community
    </ForwardRef(Typography)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <Field
      component={[Function]}
      disabled={false}
      displayPrompt={true}
      policyDropdownId="rek-security"
      prompt="test2"
    />
  </ForwardRef(Grid)>
  <Memo(SelectedSecurityPolicyDescription)
    selectedPolicyKey={2}
    title="test3"
  />
</ForwardRef(Grid)>
`;

exports[`SecuritySelector component should render properly for record 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={1}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <ForwardRef(Typography)
      component="p"
      variant="body2"
    >
      test description for record
    </ForwardRef(Typography)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <Field
      component={[Function]}
      disabled={false}
      displayPrompt={true}
      policyDropdownId="rek-security"
      prompt="test2"
    />
  </ForwardRef(Grid)>
  <Memo(SelectedSecurityPolicyDescription)
    selectedPolicyKey={2}
    title="test3"
  />
</ForwardRef(Grid)>
`;
